# uk_police_data_pipeline

./: LICENSE  README.md  haskell-project.cabal  uk_police_data_pipeline.cabal
data/: police.db
src/: CLI.hs  Database.hs  Fetch.hs  Parse.hs  Types.hs
src/data/: README.md
