cabal-version:       2.4
name:                haskell-project
version:             0.1.0.0
build-type:          Simple

executable haskell-project-exe
  hs-source-dirs: app, src
  main-is: Main.hs
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , http-conduit
    , text
    , bytestring
    , sqlite-simple
  default-language: Haskell2010
