cabal-version:       2.4
name:                haskell-project
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
      CLI
    , Fetch
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , http-conduit
    , text
    , bytestring
    , sqlite-simple
    , directory
  default-language: Haskell2010

executable haskell-project-exe
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >= 4.7 && < 5
    , haskell-project
  ghc-options: -Wall
  default-language: Haskell2010
