cabal-version:       2.4
name:                uk_police_data_pipeline
version:             0.1.0.0
build-type:          Simple

executable uk_police_data_pipeline
  hs-source-dirs: app, src
  main-is: Main.hs
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , http-conduit
    , text
    , bytestring
    , sqlite-simple
  default-language: Haskell2010
